--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <i class="social-icon fab fa-instagram"></i>
         <i class="social-icon fas fa-envelope"></i>
 
-      <p>© Copyright 2020 TinDog</p>
+      <p>Built by Adam Kollat</p>
 
 
   </footer>
